--- a/Session_6/style.css
+++ b/Session_6/style.css
@@ -194,3 +194,24 @@ h1{
     background-color: rgb(33, 202, 33);
     color: rgb(234, 232, 229);
 }
+
+.selected {
+    background-color: green;
+    color: white;
+    border: 2px solid darkgreen;
+}
+
+.currency-changer{
+    display: flex;
+    justify-content: space-around;
+}
+
+.currency-button{
+    width: 100px;
+    font-size: 15px;
+}
+
+.get-pass{
+    display: flex;
+    justify-content: center;
+}
