--- a/Session_6/style.css
+++ b/Session_6/style.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
 body{
     width: 100%;
     background-color: rgb(214, 214, 228);
@@ -97,8 +102,9 @@ body{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding: 5px;
+    padding: 10px;
     height: 150px;
+    background-color: rgb(59, 103, 199) ;
     border-radius: 10px;
     border: 1px solid rgb(24, 24, 25);
     align-items: center;
@@ -140,9 +146,10 @@ body{
     margin-bottom: 1.5rem;
 }
 
-#Type{
+#vehicle-type{
     width: 100%;
     height: 2.5rem;
+    border: 1px solid black;
     border-radius: 10px;
     margin-bottom: 0.5rem;
 }
@@ -204,6 +211,8 @@ h1{
 .currency-changer{
     display: flex;
     justify-content: space-around;
+    padding: 10px;
+    border: 1px solid black;
 }
 
 .currency-button{
